# RUST

./: trading_system_implementation_plan.html
trading-system/: .dockerignore  .gitignore  Cargo.toml  PROGRESS.md  README.md
trading-system/configs/: capture-only.env  example.env
trading-system/crates/ai/: Cargo.toml
trading-system/crates/ai/src/: lib.rs
trading-system/crates/api/: Cargo.toml
trading-system/crates/api/src/: ai_repository.rs  backtest_api.rs  backtest_runner.rs  dashboard_api.rs  execution_repository.rs  live_readiness.rs  main.rs  market_ingestion.rs  market_repository.rs  notify_format.rs  paper_trading.rs  risk_event_repository.rs  settings.rs  signal_repository.rs  strategy_runtime.rs  telegram.rs  testnet_runtime.rs
trading-system/crates/core/: Cargo.toml
trading-system/crates/core/src/: types.rs
trading-system/crates/exchange/: Cargo.toml
trading-system/crates/exchange/src/: binance.rs  bitget.rs  bybit.rs  lib.rs
trading-system/crates/execution/: Cargo.toml
trading-system/crates/execution/src/: lib.rs
trading-system/crates/risk/: Cargo.toml
trading-system/crates/risk/src/: lib.rs
trading-system/crates/strategy/: Cargo.toml
trading-system/crates/strategy/src/: lib.rs
trading-system/dashboard/: .env.example  README.md  package-lock.json  package.json
trading-system/dashboard/app/: layout.tsx  page.tsx  styles.css
trading-system/dashboard/app/api/[...path]/: route.ts
trading-system/dashboard/app/api/csrf/: route.ts
trading-system/dashboard/app/api/session/: route.ts
trading-system/dashboard/components/: login-panel.tsx  ops-console.tsx
trading-system/dashboard/lib/: auth.ts
trading-system/deploy/: Dockerfile  README.md  docker-compose.capture.yml  watchdog.sh
trading-system/deploy/analysis/: README.md  imbalance_backtest.sql  imbalance_backtest_synthetic_test.sql  imbalance_ic.sql  imbalance_quantiles.sql
trading-system/docs/: phase2-market-data.md  phase3-paper-execution.md  phase4-ai-filter.md  phase5-dashboard.md  phase6-live-readiness.md  runbook.md  verification-notes.md
trading-system/docs/superpowers/plans/: 2026-06-18-imbalance-backtest.md
trading-system/docs/superpowers/specs/: 2026-06-15-mean-reversion-validation-design.md  2026-06-15-trend-filtered-breakout-design.md  2026-06-15-volatility-breakout-strategy-design.md  2026-06-16-orderbook-imbalance-preregistration.md  2026-06-18-imbalance-backtest-design.md
trading-system/migrations/: 20260612000100_initial_schema.sql
