[package]
name = "trading-ai"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
rust_decimal.workspace = true
serde.workspace = true
trading-core = { path = "../core" }
uuid.workspace = true
