[package]
name = "trading-api"
version = "0.1.0"
edition.workspace = true
default-run = "trading-api"
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
trading-ai = { path = "../ai" }
trading-core = { path = "../core" }
trading-exchange = { path = "../exchange" }
trading-execution = { path = "../execution" }
trading-risk = { path = "../risk" }
trading-strategy = { path = "../strategy" }
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
