[package]
name = "trading-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
name = "trading_core"

[dependencies]
chrono.workspace = true
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

