[package]
name = "trading-execution"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
trading-core = { path = "../core" }
uuid.workspace = true
